---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed that specifying amounts on top level ingredients was disabled when the matrix solver was enabled
    - Fixed that the tutorial mode toggle was always re-activated during migration
    - Fixed that a couple of strings could not be localised

---------------------------------------------------------------------------------------------------
Version: 1.1.61
Date: 05. 04. 2023
  Features:
    - Added hotkeys to go up a floor (Alt + Up) and to the top floor (Shift + Alt + Up)
    - Implemented paste functionality for machine fuel
  Changes:
    - Added Ukranian translation (Thanks Met en Bouldry!)
    - Changed the ingredient combinator button to use a sprite instead of text
  Bugfixes:
    - Fixed that absurdly high module effects were not being capped correctly at the engine limit of +32767%
    - Fixed a few inconsistencies around raw ores and made them more visually distinct
    - Fixed an issue where the centering of modal dialogs didn't work in all cases anymore

---------------------------------------------------------------------------------------------------
Version: 1.1.60
Date: 31. 12. 2022
  Changes:
    - Updated to the new flib translation library for faster translations, requiring a bump of the minimum flib version to 0.9.2 and a minimum Factorio version of 1.1.74
    - Added Spanish localisation (Thanks MarXam!)
    - Filtered out dummy entities from the 'Ghost on Water' mod
  Bugfixes:
    - Fixed a crash when deleting the last subfactory in the list
    - Fixed a migration crash when adding the example subfactory with Industrial Revolution loaded
    - Fixed a crash when clicking the ingredient combinator button without any ingredients present
    - Fixed a crash caused by a mod adding trains with a capacity of zero